--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.0.0",
+    "axios": "^0.18.0",
     "cross-env": "^5.2.0",
-    "nuxt": "^2.0.0",
-    "element-ui": "^2.4.6",
-    "@nuxtjs/axios": "^5.0.0"
+    "dayjs": "^1.7.7",
+    "element-ui": "^2.4.11",
+    "nuxt": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
